@@ -1,3 +1,6 @@
+2012-02-01
+ * added killall_wse command (without script end)
+
 2012-01-29
  * log system startup errors
  * added rts2script element to .rts2 templates
